:bug: Fixing ui bug on mobile

--- a/frontend/src/css/Splash.css
+++ b/frontend/src/css/Splash.css
@@ -143,9 +143,9 @@ aside > p[data-citystats-theme='true'] {
 /* Mobile Only */
 @media (max-width: 35em) {
     .container {
-        margin: 0 0.5rem;
-        margin-top: 10vh;
-        width: 96vw;
+        margin: 0 0.25rem;
+        margin-top: 1em;
+        width: 95vw;
     }
     h1.title {
         font-size: 400%;
